fixed overlap, form reset and hover effect

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -57,5 +57,10 @@
     font-style: normal;
     text-decoration: none;
     color: $main-text-color;
+
+    &:hover {
+      color: #7a7a7a;
+      cursor: pointer;
+    }
   }
 }
