--- a/src/styles/blocks/detail.scss
+++ b/src/styles/blocks/detail.scss
@@ -27,6 +27,10 @@
     height: 100%;
     object-fit: cover;
     @include hover(scale, 1.1);
+
+    @include onDesktop {
+      @include hover(scale, 1.05);
+    }
   }
 
   &__title {
